# pywrangler

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  developer_guide.rst  index.rst  meet_pywrangler.rst  user_guide.rst
notebooks/: interval.ipynb  oscillation_timeseries.csv
src/pywrangler/: __init__.py  base.py  benchmark.py  exceptions.py  skeleton.py  wranglers.py
src/pywrangler/dask/: base.py  benchmark.py
src/pywrangler/pandas/: base.py  benchmark.py  util.py
src/pywrangler/pyspark/: base.py  benchmark.py  pipeline.py  testing.py  types.py  util.py
src/pywrangler/spark/: base.py  benchmark.py  pipeline.py  util.py
src/pywrangler/util/: _pprint.py  dependencies.py  helper.py  sanitizer.py  testing.py  types.py
src/pywrangler/wranglers/: base.py  interfaces.py
src/tswrangler/: skeleton.py
tests/: conftest.py  test_base.py  test_benchmark.py  test_environment.py  test_interfaces.py  test_skeleton.py  test_wranglers.py  travis_install.sh  travis_java_install.sh
tests/dask/: test_base.py  test_benchmark.py
tests/pandas/: test_base.py  test_benchmark.py  test_interval_identifier.py  test_util.py
tests/pandas/wranglers/: test_interval_identifier.py
tests/pyspark/: conftest.py  test_base.py  test_benchmark.py  test_environment.py  test_pipeline.py  test_testing.py  test_util.py
tests/pyspark/wranglers/: test_interval_identifier.py
tests/spark/: conftest.py  test_base.py  test_benchmark.py  test_testing.py  test_util.py
tests/test_data/: interval_identifier.py
tests/util/: test_dependencies.py  test_helper.py  test_pprint.py  test_sanitizer.py  test_testing.py
tests/wranglers/: test_base.py  test_interfaces.py
travisci/: code_coverage.sh  coveralls_master.sh  fix_paths.py  java_install.sh  tox_invocation.sh
(+34 files in other folders)
