
[metadata]
name = pywrangler
description = Data wrangling for time series
author = mansenfranzen
author-email = franz.woellert@gmail.com
license = mit
url = https://github.com/mansenfranzen/pywrangler
long-description = file: README.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires = pandas

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox
    memory_profiler
    pyarrow
    codecov

dev =
    sphinx
    twine


[options.entry_points]


[test]
extras = True

[tool:pytest]
addopts =
    --cov pywrangler --cov-report term-missing:skip-covered --cov-report xml
    --verbose
norecursedirs =
    dist
    build
    .tox
markers =
    pandas: marks all pandas tests
    pyspark: marks all pyspark tests
    dask: marks all dask tests

testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = pywrangler
extensions =
    pre_commit
    tox
    travis
